# SC8

./: README.md
solar_rust/: Cargo.toml  drivercontroller.dbc  fakeframes.txt  motorcontroller.dbc  mppt.dbc
solar_rust/src/: lib.rs  main.rs  messages_drivercontroller.rs  messages_motorcontroller.rs  messages_mppt.rs  parser.rs
solar_rust/tests/: golden_replay.rs
solar_rust/tests/golden/: RawDataLog-20251016-2042.txt  RawDataLog-20251016-2118.txt
